@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12467: warnings: fix a race condition if a warning is emitted at
+  shutdown, if globals()['__file__'] is None.
+
 
 What's New in Python 3.2.1 release candidate 2?
 ===============================================
